Fixed issue where you couldn't click on pokemons on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,6 +317,7 @@ li {
 }
 
 /* Adjustments for smaller screens */
+/* Galaxy Fold */
 @media only screen and (max-width: 767px) {
     .game-box {
         height: 90%;
@@ -388,7 +389,6 @@ li {
         flex-direction: column;
         align-items: center;
         position: absolute;
-        z-index: 2;
         margin-top: -120px;
         margin-bottom: -90px;
     }
@@ -434,5 +434,12 @@ li {
         max-width: 100%;
         height: auto;
     }
-
 }
+
+/* iPhone 12 Pro */
+@media only screen and (device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
+    
+}
+
+/* Tablet */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {}
